Release Version 2.1: Add SQL certification  details in certificate section fix: align SVG with inline-flex in CSS update date

--- a/style.css
+++ b/style.css
@@ -269,6 +269,8 @@ nav ul li a {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
+    display: inline-flex;
+    align-items: center;
 }
 nav ul li a:hover {
     border: 2px solid;
@@ -818,7 +820,9 @@ footer p {
     margin: 2px;
 }
 
-footer div p a {
+footer a {
     color: white;
+    display: inline-flex;
+    align-items: center;
 }
 /* Footer Styles End*/
